--- a/res/anim/dir_fadein_front.xml
+++ b/res/anim/dir_fadein_front.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <scale
-        android:duration="200"
+        android:duration="@integer/folder_animation_duration"
         android:fromXScale="1.05"
         android:fromYScale="1.05"
         android:pivotX="50%"
@@ -12,6 +12,6 @@
     <alpha xmlns:android="http://schemas.android.com/apk/res/android"
         android:fromAlpha="0.0"
         android:toAlpha="1.0"
-        android:duration="200"
+        android:duration="@integer/folder_animation_duration"
         />
 </set>
